--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarScroll">
         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Productos</a>
+            <a class="nav-link active" aria-current="page" href="pages/productos.html">Productos</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -58,6 +58,9 @@
 
     </header>
     <main class="main">
+      <h2>
+        tienda de Musica
+      </h2>
 <div  id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true" >
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
