--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
           <span class="visually-hidden">FacuBenitez</span>
         </span>
       </button>
-      <button class="btn btn-sm btn-outline-secondary" type="button">Favoritos</button>
+      <button class="btn btn-outline-success me-2 position-relative" type="button">Favoritos
+        <span id="buttonFavoritos" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+          0
+        </span>
+      </button>
     </form>
   </nav>
 
