--- a/pages/caracteristicas.html
+++ b/pages/caracteristicas.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProductosData</title>
-         <!--link de boostrap-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <!--LINK DE CSS-->
 <link rel="stylesheet" href="../CSS/main.css">
-     
+<!--link de boostrap-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<!--boostrap js-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous" defer></script>
 </head>
 <body class="colorMenuC">
     <header>
@@ -125,8 +126,7 @@
     document.getElementById("modeloProducto").innerHTML = caracteristicas.modelo;
     document.getElementById("precioProducto").innerHTML = caracteristicas.precio;
     document.getElementById("colorProducto").innerHTML = caracteristicas.color;
-    document.getElementById("imagenProducto").innerHTML = caracteristicas.img;
-</script>
+    document.getElementById("imagenProducto").innerHTML = caracteristicas.img;</script>
 
 </body>
 </html>
