--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -14,13 +14,14 @@
 <!--link de js-->
 <script src="../main.js" defer></script>
 </head>
+
 <body>
     <header>
         <h1>
             hola mundo
         </h1>
     </header>
-    <main>
+    <main id="contenedorProductos">
         <h2>
             hhh
         </h2>
