--- a/pages/caracteristicas.html
+++ b/pages/caracteristicas.html
@@ -11,6 +11,8 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <!--boostrap js-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous" defer></script>
+    <!--script de js-->
+    <script src="main.js" defer></script>
 </head>
 <body class="colorMenuC">
     <header>
@@ -89,8 +91,8 @@
     <p id="colorProducto" class="colorC">
 
     </p>
-    <div id="imagenProducto" class="imgC">
-        <img src="" alt="" id="imagenProducto">
+    <div>
+      <img src="" id="imagenProducto"   alt="">
     </div>
 </main>
 <footer>
@@ -119,14 +121,17 @@
 
 
 </footer>
+
+
 <script>
-    const caracteristicas = JSON.parse(localStorage.getItem(`verProductos`))
+    const caracteristicas = JSON.parse(localStorage.getItem("verProductos"))
     console.log(caracteristicas);
     document.getElementById("tituloProducto").innerHTML = caracteristicas.nombre;
     document.getElementById("modeloProducto").innerHTML = caracteristicas.modelo;
     document.getElementById("precioProducto").innerHTML = caracteristicas.precio;
     document.getElementById("colorProducto").innerHTML = caracteristicas.color;
     document.getElementById("imagenProducto").innerHTML = caracteristicas.img;</script>
+
 
 </body>
 </html>
