--- a/pages/caracteristicas.html
+++ b/pages/caracteristicas.html
@@ -92,7 +92,7 @@
 
     </p>
     <div>
-      <img src="" id="imagenProducto"   alt="">
+      <img id="imagenProducto" width="700" height="500"  src="../img/descarga.png" alt="">
     </div>
 </main>
 <footer>
